--- a/index.html
+++ b/index.html
@@ -80,14 +80,29 @@
       </ul>
     </nav>
     <v-app>
-      <v-card class="mb-1" height="50px">
-        <v-toolbar flat>
-          <v-btn icon>
-            <v-icon>mdi-apps</v-icon>
+      <v-card class="main mb-3" height="70px">
+        <v-toolbar class="text-center pl-3" flat>
+          <v-btn
+          class="text-center"
+          title="Go back"
+          v-if="$route.meta.showBack"
+          @click="$router.go(-1)"
+          icon>
+            <v-icon>mdi-keyboard-return</v-icon>
           </v-btn>
+          <v-divider
+            class="mx-4"
+            inset
+            vertical
+          ></v-divider>
           <v-spacer></v-spacer>
+          <v-divider
+            class="mx-4"
+            inset
+            vertical
+          ></v-divider>
           <v-btn id="full-toggle" title="Toggle fullscreen" icon>
-            <span class="lnr lnr-crop"></span>
+            <span class="mdi mdi-fullscreen"></span>
           </v-btn>
         </v-toolbar>
       </v-card>
@@ -98,102 +113,195 @@
   </main>
 
   <template id="main-data-students">
-    <section>
-    <v-row>
+    <div>
+      <v-row>
+        <v-text-field
+        class="col-xs-12 col-md-9 px-5"
+        v-model="search"
+        append-icon="mdi-magnify"
+        label="Пошук"
+        single-line hide-details
+        ></v-text-field>
+        <v-layout class="col-xs-3 d-flex align-center justify-center">
+        <v-switch
+        id="switch"
+        v-model="options.studyStatus" flat
+        dense
+        color="teal darken-4"
+        ></v-switch>
+        <v-label v-if="options.studyStatus">Чи навчаються: Так</v-label>
+        <v-label v-else>Чи навчаються: Ні</v-label>
+      </v-layout>
+      </v-row>
+      <v-data-table
+      :headers="headers"
+      :items="students"
+      :item-key="itemKey"
+      :sort-by="sortBy"
+      multi-sort
+      :search="search"
+      no-results-text="Не знайдено відповідних записів"
+      v-model="selected"
+      :single-select="singleSelect"
+      show-select
+      :options.sync="options"
+      :items-per-page="itemsPerPage"
+      @page-count="pageCount = $event"
+      @click:row="moreInfo"
+      class="elevation-1 people"
+      hide-default-footer
+      :loading="loading"
+      loading-text="Завантаження... Будь ласка, зачекайте"
+      ></v-data-table>
+      <v-pagination
+      class="font-weight-black"
+      v-model="options.page"
+      :total-visible="7"
+      :length="pageCount"
+      @click.native="scrollToTop"
+      dark color="teal darken-4"
+      ></v-pagination>
       <v-text-field
-      class="col-xs-12 col-md-9 px-5"
-      v-model="search"
-      append-icon="mdi-magnify"
-      label="Пошук"
-      single-line hide-details
+      v-model="totalItems"
+      @click:prepend-inner="changeIcon"
+      :prepend-inner-icon="icon"
+      solo readonly
       ></v-text-field>
-      <v-flex class="col-xs-3 d-flex align-center justify-center">
-      <v-switch
-      id="switch"
-      v-model="options.studyStatus" flat
-      dense
-      color="teal darken-4"
-      ></v-switch>
-      <v-label v-if="options.studyStatus === true">Чи навчаються: Так</v-label>
-      <v-label v-else>Чи навчаються: Ні</v-label>
-    </v-flex>
-      <v-alert
-      type="success"
-      v-model="alert"
-      icon="mdi-check-circle"
-      outlined text light tile
-      transition="scale-transition"
-      >Текст успішно скопійовано.
-      </v-alert>
-    </v-row>
-    <v-data-table
-    :headers="headers"
-    :items="students"
-    :item-key="itemKey"
-    :sort-by="sortBy"
-    multi-sort
-    :search="search"
-    :single-expand="singleExpand"
-    no-results-text="Не знайдено відповідних записів"
-    show-expand
-    v-model="selected"
-    :single-select="singleSelect"
-    show-select
-    expand-icon="mdi-chart-timeline"
-    :options.sync="options"
-    :items-per-page="itemsPerPage"
-    @page-count="pageCount = $event"
-    @click:row="moreInfo"
-    class="elevation-1"
-    hide-default-footer
-    :loading="loading"
-    loading-text="Завантаження... Будь ласка, зачекайте"
-    >
-      <template #items="props">
-        <td>$props.item.name</td>
-        <td>$props.item.group</td>
-        <td>$props.item.specialty</td>
-        <td>$props.item.phone</td>
-        <td>$props.item.birth</td>
-      </template>
-      <template #expanded-item="{ headers, item }">
-        <td :colspan="headers.length" class="pt-3">
-          <p @click="doCopy" :alt="item.email" title="Click to copy" class="btn-copy">Email: {{ item.email }}</p>
-        </td>
-      </template>
-    </v-data-table>
-    <v-pagination
-    class="font-weight-black"
-    v-model="options.page"
-    :total-visible="7"
-    :length="pageCount"
-    @click.native="scrollToTop"
-    dark color="teal darken-4"
-    ></v-pagination>
-    <v-text-field
-    v-model="totalItems"
-    @click:prepend-inner="changeIcon"
-    :prepend-inner-icon="icon"
-    solo readonly
-    ></v-text-field>
+    </div>
     <router-view></router-view>
-  </section>
   </template>
 
   <template id="main-data-students-person">
-    <section>
-      <v-img
-      :src="person.picture"
-      :aspect-ratio="3/4"
-      width="150"
-      ></v-img>
-    </section>
+    <div class="mx-1 text-center">
+      <div class="description mb-3">
+        <div class="text-center float-sm-left mr-sm-3">
+          <v-img :src="person.picture" :aspect-ratio="3/4" class="mx-auto mb-1" width="250"></v-img>
+          <span class="font-weight-bold mb-1">Дата реєстрації:</span> {{ person.registered }}
+        </div>
+          <h1 class="text--secondary">Електронна залікова книжка №: {{ person.bookNumber }}</h1>
+          <h3 class="mb-1">{{ person.name }}</h3>
+          <v-divider class="my-3"></v-divider>
+          <div class="text-justify ml-3">
+            <span class="font-weight-bold">Напрям/спеціальність:</span> {{ person.specialty }} <br>
+            <v-divider class="my-2"></v-divider>
+            <span class="font-weight-bold">Відділення:</span> {{ person.department }} <br>
+            <v-divider class="my-2"></v-divider>
+            <span class="font-weight-bold">Рівень вищої освіти/освітньо-кваліфікаційний рівень:</span> {{ person.degree }} <br>
+            <v-divider class="my-2"></v-divider>
+            {{ person.enrolledIn }}, наказ від: {{person.enrolledOrderDate}}р. №: {{ person.enrolledOrder }} <br>
+          </div>
+          <v-divider class="my-3"></v-divider>
+          <div class="text-justify">
+            <span class="font-weight-bold">Група:</span> {{ person.group }}
+            <span class="font-weight-bold ml-sm-5">Форма навчання:</span> {{ person.trainingForm }}
+            <div class="ml-sm-5" v-if="store.state.status === 'admin' || store.state.status === 'teacher'">
+              <span class="font-weight-bold">Телефон:</span> {{ person.phone }}
+            </div>
+          </div>
+      </div>
+      <v-divider class="my-3"></v-divider>
+        <h2 class="text--secondary">Заліки, екзамени, курсові роботи, практики</h2>
+          <v-divider class="my-3"></v-divider>
+          <p v-if="!gotData">Не знайдено відповідних записів</p>
+          <div v-for="examination in examinatins" class="text-justify">
+          <h4 class="title ml-5 my-3">{{ examination.semester }} 2019/2020 навчального року</h4>
+          <v-divider class="my-3"></v-divider>
+            <v-data-table
+            :headers="headers"
+            :items="examination.subjects"
+            :item-key="itemKey"
+            @click:row="teacherInfo"
+            hide-default-footer
+            class="elevation-1 people"
+            ></v-data-table>
+          <v-divider class="my-3"></v-divider>
+        </div>
+      </div>
+    <router-view></router-view>
+  </template>
+
+  <template id="main-data-teachers">
+    <div>
+      <v-row>
+        <v-text-field
+        class="col-xs-12 px-5"
+        v-model="search"
+        append-icon="mdi-magnify"
+        label="Пошук"
+        single-line hide-details
+        ></v-text-field>
+      </v-row>
+      <v-data-table
+      :headers="headers"
+      :items="teachers"
+      :item-key="itemKey"
+      :sort-by="sortBy"
+      multi-sort
+      :search="search"
+      v-model="selected"
+      :single-select="singleSelect"
+      show-select
+      no-results-text="Не знайдено відповідних записів"
+      :page="page"
+      :items-per-page="itemsPerPage"
+      @page-count="pageCount = $event"
+      @click:row="moreInfo"
+      class="elevation-1 people"
+      hide-default-footer
+      :loading="loading"
+      loading-text="Завантаження... Будь ласка, зачекайте"
+      ></v-data-table>
+      <v-pagination
+      class="font-weight-black"
+      v-model="page"
+      :total-visible="7"
+      :length="pageCount"
+      @click.native="scrollToTop"
+      dark color="teal darken-4"
+      ></v-pagination>
+      <v-text-field
+      v-model="totalItems"
+      @click:prepend-inner="changeIcon"
+      :prepend-inner-icon="icon"
+      solo readonly
+      ></v-text-field>
+    </div>
+    <router-view></router-view>
+  </template>
+
+  <template id="main-data-teachers-person">
+    <div class="mx-1 text-justify">
+      <div class="description text-center mb-3">
+        <div class="text-center float-sm-left mr-sm-3">
+          <v-img :src="person.picture" :aspect-ratio="3/4" class="mx-auto mb-1" width="250"></v-img>
+          <span class="font-weight-bold mb-1">Дата реєстрації:</span> {{ person.registered }}
+        </div>
+          <h3 class="mb-1">{{ person.name }}</h3>
+          <v-divider class="my-3"></v-divider>
+      </div>
+      <span class="font-weight-bold">Телефон:</span> {{ person.phone }}
+      <v-divider class="my-3"></v-divider>
+      <span class="font-weight-bold">Викладає навчальні дисципліни:</span>
+          <v-divider class="my-3"></v-divider>
+          <p v-if="!gotData">Не знайдено відповідних записів</p>
+            <v-data-table
+            :headers="headers"
+            :items="subjects"
+            :item-key="itemKey"
+            hide-default-footer
+            class="elevation-1"
+            >
+              <template #items="props">
+                <td class="text-md-left">{{ props.item.name }}</td>
+              </template>
+            </v-data-table>
+          <v-divider class="my-3"></v-divider>
+        </div>
     <router-view></router-view>
   </template>
 
   <span class="lnr lnr-chevron-up" onclick="goToTop()" id="go-top-btn"></span>
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.4/clipboard.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/vuetify@2.x/dist/vuetify.js"></script>
   <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/vuex/3.1.3/vuex.min.js"></script>
@@ -217,10 +325,10 @@
     const toggle = document.getElementById("full-toggle");
     document.addEventListener('fullscreenchange', (event) => {
       if (!document.fullscreenElement) {
-        toggle.innerHTML = '<span class="lnr lnr-crop"></span>';
+        toggle.innerHTML = '<span class="mdi mdi-fullscreen"></span>';
       } else {
         if (document.exitFullscreen) {
-          toggle.innerHTML = '<span class="lnr lnr-frame-contract"></span>';
+          toggle.innerHTML = '<span class="mdi mdi-fullscreen-exit"></span>';
         }
       }
     });
